--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,12 +7,12 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+  - name: Projects
+    url: '#projects'
+    weight: 20
   - name: Skills
     url: '#skills'
-    weight: 20
-  # - name: Projects
-  #   url: '#projects'
-  #   weight: 30
+    weight: 30
   # - name: Talks
   #   url: '#talks'
   #   weight: 40
